# telegram-video-automation

./: .gitignore  .gitmodules  CLAUDE.md  QUICK_START.md  README.md  SCAN_RESUME.md  backup_captions.json  config.yaml  download-everything.sh  download.sh  failed_downloads.txt  index.html  main.py  pyproject.toml  requirements.txt  run_auth.sh  run_smart.sh  scan.sh  smart_dispatch.py  upload.sh  upload_to_telegram.sh  view.sh
.github/: copilot-instructions.md
Assets/: facebook_group.txt
demo/: terminal_demo.html
docs/: ARCHITECTURE.md  CLI.md
scripts/: analyze_html.py  auth_helper.py  auth_login.py  check_bot_status.py  check_channel_history.py  check_upload_status.py  clean_database.py  course_scraper.py  debug_pagination.py  download_resources.py  fix_manifest.py  fix_sections.py  generate_index.py  generate_viewer.py  manual_process_video.py  organize_manifest.py  organize_weekend_youtuber.py  process_and_upload.py  reconstruct_manifest.py  reorder_manifest.py  replace_video.py  restore_and_organize.py  restore_descriptions.py  retry_failed_uploads.py  run_scraper.py  scan_and_archive_pages.py  scrape_site_structure.py  scrape_weekend_youtuber_cookies.py  scrape_weekend_youtuber_structure.py  scrape_with_cookies.py  scrape_with_manual_login.py  scraper.py  smart_scraper.py  test_captions.py  test_formatting_fix.py  test_video_duration.py  update_captions.py  update_cookies.py
src/: config.py  i18n.py  manifest_manager.py  manifest_tracker.py  media_library.py  media_resolver.py  page_archiver.py  reporter.py  telegram_utils.py  video_utils.py
(+133 files in other folders)
