[project]
name = "video-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "ffmpeg>=1.4",
    "ffmpeg-python>=0.2.0",
    "pillow>=11.3.0",
    "pyrogram>=2.0.106",
    "python-dotenv>=1.1.1",
    "python-telegram-bot>=22.3",
    "requests>=2.32.4",
    "selenium>=4.34.2",
    "tgcrypto>=1.2.5",
    "tqdm>=4.67.1",
    "yt-dlp>=2025.7.21",
]
